--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Bootstrap</title>
+  <title>Betsy Olaussen</title>
 </head>
 <body>
-<div class="container">
 
-</div><!-- container -->
 
-<script src="js/jquery-3.4.1.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+
+
+<script src="js/p5.min.js"></script>
+
 </body>
 </html>
