--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Betsy Olaussen</title>
 </head>
 <body>
-
-  <h1>Betsy Olaussen</h1>
-
+  <div class="homepage">
+    <h1>Betsy Olaussen</h1>
+  </div>
 
 
 <script src="js/p5.min.js"></script>
