--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 <body>
   <div class="homepage">
-    <h1>Betsy Olaussen</h1>
+    <div class="title">
+      <h1>Betsy Olaussen</h1>
+    </div>
   </div>
 
 
 <script src="js/p5.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/pushIn.js"></script>
 
 </body>
 </html>
