--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="homepage">
-    <div class="title">
+    <div class="menubar">
       <h1>Betsy Olaussen</h1>
     </div>
   </div>
