--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
   <div class="homepage">
-    <div class="menubar">
-      <h1>Betsy Olaussen</h1>
+    <div class="title-box">
+      <div class="title-text">
+        <h1>betsy.<br>photo</h1>
+      </div>
     </div>
+    <p>Website is under construction, check back soon!</p>
   </div>
 
 
