changed title to betsy olaussen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="homepage">
     <div class="title-box">
       <div class="title-text">
-        <h1>betsy.<br>photo</h1>
+        <h1>betsy olaussen</h1>
       </div>
     </div>
     <p>Website is under construction, check back soon!</p>
